modified templates posts from db

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,11 +12,14 @@
             <h2><a href="">My first post</a></h2>
             <p>english hia bc</p>
         </div>
-
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
-            <p>eng mofo</p>
+            {% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h2><a href="">{{ post.title }}</a></h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
         </div>
     </body>
 </html>
